--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 theme: jekyll-theme-minimal
 title: Zihan Gao
 logo: imgs/IMG_6627.JPG
-description: "PhD Student
-  <br>Information School
-  <br>University of Wisconsin-Madison
-  <br>Madison, WI 53706
-  <br>
-  <br>Email: zihan [dot] gao [at] wisc [dot] edu"
-  <br>
-  <br><a href=\"https://www.linkedin.com/in/zihan-gao-520a92252/\">Linkedin</a>
+description: |
+  PhD Student
+  Information School
+  University of Wisconsin-Madison
+  Madison, WI 53706
+  
+  Email: zihan [dot] gao [at] wisc [dot] edu
+  
+  <a href="https://www.linkedin.com/in/zihan-gao-520a92252/">Linkedin</a>
