--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Zihan Gao
-logo: imgs/IMG_6627.JPG
+logo: IMG_6627.JPG
 description: |
   PhD Student
   Information School
