--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Zihan Gao
-logo: IMG_6627.JPG
+logo: zihan_head_pro.JPG
 description: "PhD Student
   <br>Information School
   <br>University of Wisconsin-Madison
