Update description from 'PhD Student' to 'PhD Candidate'

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: Zihan Gao
 logo: zihan_head_pro.JPG
-description: "PhD Student
+description: "PhD Candidate
   <br>Information School
   <br>University of Wisconsin-Madison
   <br>Madison, WI 53706
